# sidero

./: Cargo.toml  Dockerfile  README.md  smithery.yaml
src/: api_client.rs  handler.rs  main.rs  protocol.rs  semgrep_wrapper.rs
